--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,24 @@
     <meta name="description" content="SPEAKY SCHOOL">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SPEAKY SCHOOL</title>
+    <!-- FAVICON -->
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
+    <!-- / FAVICON -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -533,18 +551,18 @@
                                                 </div>
                                             </div>
                                             <div class="popup__item-chose">
-                                                <label for="online-old" class="popup__item-radio-online popup__item-radio-box">
-                                                    <input type="radio" id="online-old" class="popup__item-radio"
-                                                        name="popup__item-radio" checked>
-                                                    <span class="popup__item-radio-fake"></span>
-                                                    <span class="popup__item-radio-text">Онлайн-занятия</span>
-                                                </label>
-                                                <label for="offline-old" class="popup__item-radio-offline popup__item-radio-box">
-                                                    <input type="radio" id="offline-old" class="popup__item-radio"
-                                                        name="popup__item-radio">
-                                                    <span class="popup__item-radio-fake"></span>
-                                                    <span class="popup__item-radio-text">Занятия в клубе</span>
-                                                </label>
+                                                <label class="popup__item-radio-online popup__item-radio-box">
+                                                        <input type="radio" id="online-old" class="popup__item-radio"
+                                                            name="popup__item-radio" checked>
+                                                        <span class="popup__item-radio-fake"></span>
+                                                        <span class="popup__item-radio-text">Онлайн-занятия</span>
+                                                    </label>
+                                                <label class="popup__item-radio-offline popup__item-radio-box">
+                                                        <input type="radio" id="offline-old" class="popup__item-radio"
+                                                            name="popup__item-radio">
+                                                        <span class="popup__item-radio-fake"></span>
+                                                        <span class="popup__item-radio-text">Занятия в клубе</span>
+                                                    </label>
                                             </div>
                                             <div class="popup__item-personal-date">
                                                 <div class="popup__item-personal-date-item">
@@ -577,18 +595,18 @@
                                             </div>
                                         </div>
                                         <div class="popup__item-chose">
-                                            <label for="online-child" class="popup__item-radio-online popup__item-radio-box">
-                                                <input type="radio" id="online-child" class="popup__item-radio"
-                                                    name="popup__item-radio" checked>
-                                                <span class="popup__item-radio-fake"></span>
-                                                <span class="popup__item-radio-text">Онлайн-занятия</span>
-                                            </label>
-                                            <label for="offline-child" class="popup__item-radio-offline popup__item-radio-box">
-                                                <input type="radio" id="offline-child" class="popup__item-radio"
-                                                    name="popup__item-radio">
-                                                <span class="popup__item-radio-fake"></span>
-                                                <span class="popup__item-radio-text">Занятия в клубе</span>
-                                            </label>
+                                            <label class="popup__item-radio-online popup__item-radio-box">
+                                                    <input type="radio" id="online-old" class="popup__item-radio"
+                                                        name="popup__item-radio" checked>
+                                                    <span class="popup__item-radio-fake"></span>
+                                                    <span class="popup__item-radio-text">Онлайн-занятия</span>
+                                                </label>
+                                            <label class="popup__item-radio-offline popup__item-radio-box">
+                                                    <input type="radio" id="offline-old" class="popup__item-radio"
+                                                        name="popup__item-radio">
+                                                    <span class="popup__item-radio-fake"></span>
+                                                    <span class="popup__item-radio-text">Занятия в клубе</span>
+                                                </label>
                                         </div>
                                         <div class="popup__item-personal-date">
                                             <div class="popup__item-personal-date-item">
@@ -820,18 +838,18 @@
                                                 </div>
                                             </div>
                                             <div class="popup__item-chose">
-                                                <label for="online-old" class="popup__item-radio-online popup__item-radio-box">
-                                                    <input type="radio" id="online-old" class="popup__item-radio"
-                                                        name="section__item-radio" checked>
-                                                    <span class="popup__item-radio-fake"></span>
-                                                    <span class="popup__item-radio-text">Онлайн-занятия</span>
-                                                </label>
-                                                <label for="offline-old" class="popup__item-radio-offline popup__item-radio-box">
-                                                    <input type="radio" id="offline-old" class="popup__item-radio"
-                                                        name="section__item-radio">
-                                                    <span class="popup__item-radio-fake"></span>
-                                                    <span class="popup__item-radio-text">Занятия в клубе</span>
-                                                </label>
+                                                <label class="popup__item-radio-online popup__item-radio-box">
+                                                        <input type="radio" id="online-old" class="popup__item-radio"
+                                                            name="popup__item-radio" checked>
+                                                        <span class="popup__item-radio-fake"></span>
+                                                        <span class="popup__item-radio-text">Онлайн-занятия</span>
+                                                    </label>
+                                                <label class="popup__item-radio-offline popup__item-radio-box">
+                                                        <input type="radio" id="offline-old" class="popup__item-radio"
+                                                            name="popup__item-radio">
+                                                        <span class="popup__item-radio-fake"></span>
+                                                        <span class="popup__item-radio-text">Занятия в клубе</span>
+                                                    </label>
                                             </div>
                                             <div class="popup__item-personal-date">
                                                 <div class="popup__item-personal-date-item">
@@ -864,18 +882,18 @@
                                             </div>
                                         </div>
                                         <div class="popup__item-chose">
-                                            <label for="online-child" class="popup__item-radio-online popup__item-radio-box">
-                                                <input type="radio" id="online-child" class="popup__item-radio"
-                                                    name="popup__item-radio-online" checked>
-                                                <span class="popup__item-radio-fake"></span>
-                                                <span class="popup__item-radio-text">Онлайн-занятия</span>
-                                            </label>
-                                            <label for="offline-child" class="popup__item-radio-offline popup__item-radio-box">
-                                                <input type="radio" id="offline-child" class="popup__item-radio"
-                                                    name="popup__item-radio-offline">
-                                                <span class="popup__item-radio-fake"></span>
-                                                <span class="popup__item-radio-text">Занятия в клубе</span>
-                                            </label>
+                                            <label class="popup__item-radio-online popup__item-radio-box">
+                                                    <input type="radio" id="online-old" class="popup__item-radio"
+                                                        name="popup__item-radio" checked>
+                                                    <span class="popup__item-radio-fake"></span>
+                                                    <span class="popup__item-radio-text">Онлайн-занятия</span>
+                                                </label>
+                                            <label class="popup__item-radio-offline popup__item-radio-box">
+                                                    <input type="radio" id="offline-old" class="popup__item-radio"
+                                                        name="popup__item-radio">
+                                                    <span class="popup__item-radio-fake"></span>
+                                                    <span class="popup__item-radio-text">Занятия в клубе</span>
+                                                </label>
                                         </div>
                                         <div class="popup__item-personal-date">
                                             <div class="popup__item-personal-date-item">
