create section training, and update js for tubs

--- a/app/adult-education.html
+++ b/app/adult-education.html
@@ -634,29 +634,35 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="packages__content-item-cards">
-                    <div class="packages-card" style="background-image: url(images/default-images/card-bg-1.png);">
-                        <div class="packages-card__wrapper">
-                            <div class="packages-card__time"></div>
-                            <div class="packages-card__price"></div>
-                            <button type="submit" class="packages-card__btn btn">Выбрать</button>
+
+                    <div class="price-card" style="background-image: url(images/default-images/card-bg-1.png);">
+                        <div class="price-card__wrapper">
+                            <div class="price-card__time packages-card__time"></div>
+                            <div class="price-card__price packages-card__price"></div>
+                            <button type="submit" class="price-card__btn btn">Выбрать</button>
                         </div>
                     </div>
-                    <div class="packages-card" style="background-image: url(images/default-images/card-bg-2.png);">
-                        <div class="packages-card__wrapper">
-                            <div class="packages-card__time"></div>
-                            <div class="packages-card__price"></div>
-                            <button type="submit" class="packages-card__btn btn">Выбрать</button>
+
+                    <div class="price-card" style="background-image: url(images/default-images/card-bg-2.png);">
+                        <div class="price-card__wrapper">
+                            <div class="price-card__time packages-card__time"></div>
+                            <div class="price-card__price packages-card__price"></div>
+                            <button type="submit" class="price-card__btn btn">Выбрать</button>
                         </div>
                     </div>
-                    <div class="packages-card" style="background-image: url(images/default-images/card-bg-3.png);">
-                        <div class="packages-card__wrapper">
-                            <div class="packages-card__time"></div>
-                            <div class="packages-card__price"></div>
-                            <button type="submit" class="packages-card__btn btn">Выбрать</button>
+
+                    <div class="price-card" style="background-image: url(images/default-images/card-bg-3.png);">
+                        <div class="price-card__wrapper">
+                            <div class="price-card__time packages-card__time"></div>
+                            <div class="price-card__price packages-card__price"></div>
+                            <button type="submit" class="price-card__btn btn">Выбрать</button>
                         </div>
                     </div>
+
                 </div>
+
             </div>
         </div>
     </section>
