--- a/app/children-offline.html
+++ b/app/children-offline.html
@@ -603,41 +603,86 @@
     <!-- / FOREIGN-LANGUAGES -->
 
     <!-- TRAINING PACKAGES -->
-    <!-- <div class="packages section-outer">
+    <section class="training section-outer">
         <div class="section-inner">
-            <div class="packages-wrapper">
-                <div class="packages-top">
-                    <div class="packages-title title"><span>пакеты обучения</span></div>
+            <div class="training-wrapper">
+                <div class="training-top">
+                    <div class="training-title title"><span>пакеты обучения</span></div>
                 </div>
-
-                <div class="packages-tab">
-
-                    <div class="packages-tab__wrapper">
-
-                        <div class="packages-tab__content tab-content">
-                            <div class="tab-wrapper">
-                                <div class="tab-items">
-                                    <span class="tab-list tab--active" data-tab="#tab_1">Взрослые</span>
-                                    <span class="tab-list" data-tab="#tab_2">Дети и подростки</span>
+                <div class="tabs" data-tabs>
+                    <div class="tabs-items" data-list>
+                        <button class="tabs-item" data-target="tab1">Индивидуальные уроки</button>
+                        <button class="tabs-item" data-target="tab2">Групповые уроки</button>
+                        <button class="tabs-item" data-target="tab3">Разговорный клуб</button>
+                    </div>
+                    <div class="tabs-content__item tabs__container" data-tab="tab1">
+                        <div class="tabs-content__item-container">
+                            <div class="price-card" style="background-image: url(images/default-images/card-bg-1.png);">
+                                <div class="price-card__wrapper">
+                                    <div class="price-card__time">4 занятия по 60 мин</div>
+                                    <div class="price-card__price">8800 ₽</div>
+                                    <button type="submit" class="price-card__btn btn">Выбрать</button>
                                 </div>
-                                <div class="popup-tab__content">
-                                    <div class="tab-item tab-content--active" id="tab_1">
-                                       
-                                    </div>
-                                    <div class="tab-item" id="tab_2">
-
-                                    </div>
+                            </div>
+                            <div class="price-card" style="background-image: url(images/default-images/card-bg-2.png);">
+                                <div class="price-card__wrapper">
+                                    <div class="price-card__time">8 занятий по 60 мин</div>
+                                    <div class="price-card__price">17600 ₽</div>
+                                    <button type="submit" class="price-card__btn btn">Выбрать</button>
                                 </div>
                             </div>
                         </div>
-
                     </div>
-
+                    <div class="tabs-content__item tabs__container" data-tab="tab2">
+                        <div class="tabs-content__item-container">
+                            <div class="price-card " style="background-image: url(images/default-images/card-bg-1.png); ">
+                                <div class="price-card__wrapper price-card__wrapper--depend ">
+                                    <div class="price-card__time ">4 занятия по 45-60 мин*</div>
+                                    <div class="price-card__price ">4300 ₽ </div>
+                                    <button type="submit " class="price-card__btn btn ">Выбрать</button>
+                                    <div class="price-card__depend ">*зависит от возраста ребёнка</div>
+                                </div>
+                            </div>
+                            <div class="price-card " style="background-image: url(images/default-images/card-bg-2.png); ">
+                                <div class="price-card__wrapper price-card__wrapper--depend ">
+                                    <div class="price-card__time ">8 занятий по 45-60 мин*</div>
+                                    <div class="price-card__price ">7900 ₽</div>
+                                    <button type="submit " class="price-card__btn btn ">Выбрать</button>
+                                    <div class="price-card__depend ">*зависит от возраста ребёнка</div>
+                                </div>
+                            </div>
+                            <div class="price-card " style="background-image: url(images/default-images/card-bg-3.png); ">
+                                <div class="price-card__wrapper price-card__wrapper--depend ">
+                                    <div class="price-card__time ">12 занятий по 45-60 мин*</div>
+                                    <div class="price-card__price ">11850 ₽</div>
+                                    <button type="submit " class="price-card__btn btn ">Выбрать</button>
+                                    <div class="price-card__depend ">*зависит от возраста ребёнка</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tabs-content__item tabs__container" data-tab="tab3">
+                        <div class="tabs-content__item-container">
+                            <div class="price-card" style="background-image: url(images/default-images/card-bg-1.png);">
+                                <div class="price-card__wrapper">
+                                    <div class="price-card__time">4 занятия по 60 мин</div>
+                                    <div class="price-card__price">3600 ₽ </div>
+                                    <button type="submit" class="price-card__btn btn">Выбрать</button>
+                                </div>
+                            </div>
+                            <div class="price-card" style="background-image: url(images/default-images/card-bg-2.png);">
+                                <div class="price-card__wrapper">
+                                    <div class="price-card__time">8 занятий по 60 мин</div>
+                                    <div class="price-card__price">6800 ₽</div>
+                                    <button type="submit" class="price-card__btn btn">Выбрать</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
             </div>
         </div>
-    </div> -->
+    </section>
     <!-- / TRAINING PACKAGES -->
 
     <!-- TRIAL-LESSON -->
