--- a/app/children-offline.html
+++ b/app/children-offline.html
@@ -219,7 +219,7 @@
             <div class="section-inner">
                 <div class="header-navigation header-navigation--desktop">
                     <div class="header-navigation__logo">
-                        <a href="#" class="header-navigation__logo-link" aria-label="Logo">
+                        <a href="index.html" class="header-navigation__logo-link" aria-label="Logo">
                             <img class="header-navigation__logo-img" src="images/logo_1.svg" alt="">
                         </a>
                     </div>
@@ -298,7 +298,7 @@
             <div class="header-navigation header-navigation--mobile">
                 <div class="header-navigation__top">
                     <div class="header-navigation__logo">
-                        <a href="#" class="header-navigation__logo-link" aria-label="Logo">
+                        <a href="index.html" class="header-navigation__logo-link" aria-label="Logo">
                             <img class="header-navigation__logo-img" src="images/logo_1.svg" alt="">
                         </a>
                     </div>
@@ -814,10 +814,10 @@
                         <div class="footer__item-title">Иностранные языки</div>
                         <ul class="footer__item-list">
                             <li class="footer__item-list-link">
-                                <a href="adult-education.html" aria-label="Adults-online">Для взрослых онлайн</a>
+                                <a href="public-offer.html" aria-label="Adults-online">Публичная оферта</a>
                             </li>
                             <li class="footer__item-list-link">
-                                <a href="adult-education.html" aria-label="Adult-Offline">Для взрослых офлайн</a>
+                                <a href="adult-education.html" aria-label="Adult-Offline">Для взрослых</a>
                             </li>
                             <li class="footer__item-list-link">
                                 <a href="children-online.html" aria-label="Kids-online">Для детей онлайн</a>
@@ -829,7 +829,7 @@
                     </div>
                     <div class="footer__item footer__item--logo">
                         <div class="footer__item-logo">
-                            <a href="#" class="footer__item-logo-link" aria-label="Logo"><img src="images/logo_2.svg" alt=""></a>
+                            <a href="index.html" class="footer__item-logo-link" aria-label="Logo"><img src="images/logo_2.svg" alt=""></a>
                         </div>
                         <div class="footer__item-social">
                             <a href="https://www.facebook.com/speakyricky.troitsk/" target="_blank" rel="noopener" class="footer__item-social-link" aria-label="facebook">
