--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="REFRESH" content="0;url=some/app/index.html">
+    <meta http-equiv="REFRESH" content="0;url=/app/index.html">
     <title>Document</title>
 </head>
 
