--- a/app/adult-education.html
+++ b/app/adult-education.html
@@ -218,10 +218,10 @@
                 <div class="intro-info">
                     <h1 class="intro-info__title">ЭФФЕКТИВНОЕ ИЗУЧЕНИЕ ЯЗЫКОВ</h1>
                     <p class="intro-info__text">Прокачайте язык вместе с нами под любые цели</p>
-                    <a href="#popup-trial" class="btn intro-info-btn js-modal-open">Пробное занятие</a>
+                    <a href="#popup-trial" class="btn intro-info-btn js-modal-open" tabindex="0" aria-label="Trial lesson">Пробное занятие</a>
                 </div>
                 <div class="intro-images">
-                    <img src="images/default-images/illustration-14.png" alt="">
+                    <img src="images/default-images/illustration-14.png" alt="photo">
                 </div>
             </div>
         </div>
