--- a/app/index.html
+++ b/app/index.html
@@ -50,10 +50,10 @@
                                     <a class="menu-wrapper__item-link" href="#" aria-label="Menu">Обучение детей</a>
                                     <ul class="menu-wrapper__dropdown">
                                         <li class="menu-wrapper__dropdown-item">
-                                            <a class="menu-wrapper__dropdown-item-link" href="children-online.html" aria-label="Online">Онлайн-занятия</a>
+                                            <a class="menu-wrapper__dropdown-item-link" href="children-online.html" aria-label="Online" tabindex="0">Онлайн-занятия</a>
                                         </li>
                                         <li class="menu-wrapper__dropdown-item">
-                                            <a class="menu-wrapper__dropdown-item-link" href="children-offline.html" aria-label="Offline">Занятия в клубе</a>
+                                            <a class="menu-wrapper__dropdown-item-link" href="children-offline.html" aria-label="Offline" tabindex="0">Занятия в клубе</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -217,7 +217,7 @@
             <div class="intro__content">
                 <div class="intro-info">
                     <h1 class="intro-info__title">ШКОЛА ИНОСТРАННЫХ ЯЗЫКОВ ДЛЯ ВСЕЙ СЕМЬИ</h1>
-                    <a href="#popup-trial" class="btn intro-info-btn js-modal-open">Пробное занятие</a>
+                    <a href="#popup-trial" class="btn intro-info-btn js-modal-open" tabindex="0" aria-label="Trial lesson">Пробное занятие</a>                
                 </div>
                 <div class="intro-images">
                     <img src="images/default-images/illustration-1.png" alt="">
